--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -201,9 +201,8 @@
 @media (min-width: 768px) and (max-width: 1200px) {
     .block {
       flex-wrap: wrap;
-      
     }
     .footer__modifier {
-      flex-basis: 33.3%;
+      width: 33%;
     }
 }
