--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,7 +1,7 @@
 @import 'normalize';
 @import 'fonts';
 @import 'variables';
-
+@import 'hamburger';
 @import 'header';
 @import 'main';
 @import 'footer';
