--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,8 @@
 @import 'normalize';
 @import 'fonts';
 @import 'variables';
+@import 'select';
+@import 'menu';
 @import 'hamburger';
 @import 'header';
 @import 'main';
