--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,4 @@
-.wrapper {
-  max-width: 83.3333%;
-  margin: 0 auto;
-}
+
 
 .main {
   padding: calculateRem(60) 0 calculateRem(110) 0;
@@ -71,14 +68,21 @@
     text-align: center;
     text-transform: uppercase;
     font-family: $font-family-Roboto;
+    & > p {
+      font-size: calculateRem(25);
+    }
   }
 
   &__collection-name {
     margin-bottom: calculateRem(15);
     text-align: center;
+    
+    
     font-family: $font-family-Roboto;
     font-size: $font-size-small;
-
+    & > span {
+      font-size: calculateRem(20);
+    }
     >:last-child {
       border-left: 1px solid $footer-background;
       padding-left: calculateRem(4);
@@ -87,7 +91,9 @@
 
   &__collection-price {
     text-align: center;
-
+  & > span {
+    font-size: calculateRem(23);
+  }
     &__red {
       color: $font-color-red;
     }
@@ -129,8 +135,12 @@
     color: $font-color-red;
     right: calculateRem(25);
     top: calculateRem(25);
-    padding: calculateRem(30) calculateRem(20);
-    border-radius: 60%;
+    padding: calculateRem(35) calculateRem(20);
+    border-radius: 50%;
     background-color: $font-color-white;
+    font-size: calculateRem(24);
+    @media (max-width: 768px) {
+      font-size: calculateRem(18);
+    }
   }
 }
