--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -18,7 +18,7 @@ $font-size-very-small: 12px;
 $font-size-very-very-small: 10px;
 $color-background: black;
 
-$font-family-Roboto: 'Roboto',
+$font-family-Roboto: 'Roboto-light',
 Arial,
 sans-serif;
 $font-family-Roboto-Medium: 'Roboto-Medium',
