--- a/src/scss/normalize.scss
+++ b/src/scss/normalize.scss
@@ -339,9 +339,11 @@ template {
 }
 *{
   box-sizing: border-box;
-  font-size: 13px;
   margin: 0;
   padding: 0;
+}
+ul {
+  list-style: none;
 }
 a {
   text-decoration: none;
